--- a/css/_base.scss
+++ b/css/_base.scss
@@ -33,12 +33,13 @@ body {
 	@include btn_fade;
 	&:hover {
         background: $color_splash_page;
-        .fa {color:$white;}
+        .fas {color:$white;}
 	}
-	.fa {
+	.fas {
 		color: $color_brdr_btn;
 		font-size: 1.8rem;
         padding: 0 0 0 .225em;
+        @include ease;
 	}
 }
 //Global page Elements
