--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -2,16 +2,13 @@
 
  
 footer {
-	margin-top: 6.6em;
-	clear: both;
-	border: none;
+	margin-top: 6em;
 	background: $url_2 $color_splash_page no-repeat center bottom;
 	background-attachment: fixed;
 	width: $size_100;
 	padding: 1.2em 0 4em;
-	overflow: hidden;
 	section {
-		margin:0;
+		max-width:100%;
 	}
 	h3 {
 		color: $white;
@@ -27,12 +24,12 @@ footer {
 		display: block;
 	}
 	.inner {
-		margin: 0 100px;
-		padding: 0;
-        clear: both;              
+		max-width:1050px;
+		margin: 0 auto;
         a {
             display:block;
-            padding:0;
+			padding:0;
+			font-size:1.4rem;
         }
 	}
 	.social {
@@ -45,7 +42,8 @@ footer {
 		padding: 18px 0 24px;
 	}
 	nav {
-        margin: 0;
+		margin: 0;
+		display:block;
 	}
 	.button {
 		background: $color_btn_blue;
