--- a/css/_base.scss
+++ b/css/_base.scss
@@ -4,6 +4,7 @@ html {
 	font-size: 62.5%;
 	@include bsi;
 	height: 100%;
+	--scroll-behavior: smooth;
 	scroll-behavior: smooth;
 }
 *, *::after, *::before {
@@ -17,6 +18,14 @@ body {
 	padding: 0;
 	color: $white;
 	height: 100%;
+}
+section {
+	margin:2em auto 0;
+	max-width:1080px;
+}
+article {
+	padding:0;
+	margin:0;
 }
 .button {
 	width: 220px;
