--- a/css/_header.scss
+++ b/css/_header.scss
@@ -5,13 +5,15 @@ header {
 		color: $white;
 	}
 	.inner {
+		margin:0 auto;
         display: flex;
-        justify-content: space-around;
+		justify-content: space-between;
+		max-width:1080px;
 	}
 }
 .logo {
 	color: $white;
-    padding: 14px;
+    padding: 14px 0;
     display: flex;
 	h1 {
 		color: $white;
@@ -35,7 +37,7 @@ header {
 		border: 1px solid $color_baltic_sea;
 		width: 60px;
 		height: 60px;
-		margin: 0 12px;
+		margin: 0 1em 0 0;
 		position: relative;
 		em {
 			position: absolute;
