--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -14,6 +14,7 @@
                 margin:0;
             }
         }
+
         h3 {
             font-size: 2.6rem;
             line-height: 1.2em;
@@ -27,15 +28,34 @@
             padding:14px;
             width:auto;
         }
+        #intro {
+            height:auto;
+            padding-top:0;
+            article {
+                display:block;
+                padding:1.225rem;
+                margin:0;
+                h1 {
+                    font-size:2.225rem;
+                }
+                aside {
+                    width:100%;
+                    padding:0;
+                }
+            }
+        }
+
         #about {
         height: auto;
         margin: 1em 0 0;
             article {
-            display:initial;	
+            display:block;	
             }
-            .info {
+            .skills {
                 width: auto;
                 max-height: 100%;
+                display: block;
+                margin:0;
                 div {
                     width:auto;
                 }
@@ -43,35 +63,14 @@
                     display:none;
                 }
             }
-            .skills {
-                padding: 12px 0;
-                display: none;
-                li {
-                    display: inline;
-                    padding: 0;
-                }
-                div {
-                    padding: 0;
-                    width: 58px;
-                    height: 58px;
-                    margin: 4px;
-                }
-                span {
-                    display: none;
-                }
-                .fa {
-                    font-size: 40px;
-                    padding: 12px;
-                }
-            }
         }
         article {
             max-width: $size_100;
         }
         section {
-            padding:0 1.2em;
+            padding:1.225em;
             height:auto;
-            margin: 0 0 2em;
+            margin: 0;
             .button {display:none;}
 
         }
@@ -136,6 +135,11 @@
         header .inner {
             max-width: $size_100;
             position: relative;
+            margin:0;
+
+        }
+        .page .scrnshts, .page .screens {
+            display:block;
         }
     
     #tech {
@@ -203,16 +207,7 @@
                 }
             }
         }
-        #info article {
-            display:block;
-            padding:0 14px;
-            margin:0;
 
-        aside {
-            width:100%;
-            padding:0;
-        }
-    }
  //CASE STUDIES   
     .page {
         .secondary {
@@ -258,15 +253,23 @@
             }
         }
 
-.page .secondary .scrnshts {
-    grid-template-columns: repeat(2, 1fr);
+        .page .secondary .scrnshts {
+            grid-template-columns: repeat(2, 1fr);
 
         }
             }
+
+        @media(min-width: 1440px) {
+            #home h1 {
+                font-size:3rem;
+            }
+    }
     
     @media(max-device-width: 1024px) {
         #home {
             background-attachment: scroll;
-        }
     }
+}
+
+    
     
