--- a/css/_type.scss
+++ b/css/_type.scss
@@ -3,27 +3,23 @@ h1 {
 	@extend %extend_1;
 	font-size: 2.4rem;
 	line-height: 1em;
-	padding-top: 2px;
 	font-weight: 400;
 }
 h2 {
 	@extend %extend_1;
-	font-weight: 100;
-	font-size: 3.2rem;
+	font-weight: 500;
+	font-size: 2.6rem;
 	line-height: 1em;
 	text-align:left;
 	padding:0 0 .4em;
 }
 h3 {
 	@extend %extend_1;
-	font-weight: 200;
-	display: block;
-	font-size: 3.2rem;
 }
 h4 {
 	@extend %extend_1;
-	font-weight:100;
-	padding:0.8em 0 1.2em;
+	font-weight:300;
+	padding:0 0 1.2em;
 }
 h5 {
 	@extend %extend_1;
