--- a/css/global.css
+++ b/css/global.css
@@ -65,6 +65,7 @@ html {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
   height: 100%;
+  --scroll-behavior: smooth;
   scroll-behavior: smooth;
 }
 
@@ -81,6 +82,16 @@ body {
   padding: 0;
   color: #fff;
   height: 100%;
+}
+
+section {
+  margin: 2em auto 0;
+  max-width: 1080px;
+}
+
+article {
+  padding: 0;
+  margin: 0;
 }
 
 .button {
@@ -144,27 +155,20 @@ body {
 h1 {
   font-size: 2.4rem;
   line-height: 1em;
-  padding-top: 2px;
   font-weight: 400;
 }
 
 h2 {
-  font-weight: 100;
-  font-size: 3.2rem;
+  font-weight: 500;
+  font-size: 2.6rem;
   line-height: 1em;
   text-align: left;
   padding: 0 0 .4em;
 }
 
-h3 {
-  font-weight: 200;
-  display: block;
-  font-size: 3.2rem;
-}
-
 h4 {
-  font-weight: 100;
-  padding: 0.8em 0 1.2em;
+  font-weight: 300;
+  padding: 0 0 1.2em;
 }
 
 h5 {
@@ -207,16 +211,19 @@ header strong {
 }
 
 header .inner {
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 1080px;
 }
 
 .logo {
   color: #fff;
-  padding: 14px;
+  padding: 14px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -247,7 +254,7 @@ header .inner {
   border: 1px solid #2b2b2b;
   width: 60px;
   height: 60px;
-  margin: 0 12px;
+  margin: 0 1em 0 0;
   position: relative;
 }
 
@@ -319,19 +326,10 @@ nav a i {
   padding: 0 12px 0 0;
 }
 
-section {
-  margin: 2em auto 0;
-  max-width: 1050px;
-}
-
 .page h3 {
-  font-size: 2.225rem;
+  font-size: 2rem;
   padding: 0 0 .6em;
-}
-
-.page article {
-  padding: 40px 0 0;
-  margin: 0;
+  font-weight: 500;
 }
 
 #home {
@@ -361,17 +359,13 @@ section {
 }
 
 #home h1 {
-  padding-top: 10%;
+  padding-top: 12%;
   color: #fff;
   text-align: center;
 }
 
 #home .button {
   margin: 10% auto 0;
-}
-
-#about {
-  margin: 2em 13%;
 }
 
 #about article {
@@ -384,37 +378,6 @@ section {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-top: 1.125em;
-}
-
-#about .skills {
-  overflow: hidden;
-  margin: 0;
-  text-align: center;
-  width: 100%;
-  padding: 1.125em;
-}
-
-#about .skills span {
-  display: block;
-  clear: both;
-  font-size: 1rem;
-}
-
-#about .skills .fa {
-  font-size: 58px;
-}
-
-#about .skills div em {
-  color: #cccccc;
-  font-style: normal;
-}
-
-#about .skills div em:first-child {
-  font-size: 4.8rem;
-}
-
-#about .skills div em:last-child {
-  font-size: 2.8rem;
 }
 
 #about h5 {
@@ -431,7 +394,7 @@ section {
   font-weight: 300;
 }
 
-#about .info {
+#about .skills {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -443,31 +406,29 @@ section {
           box-shadow: 0 6px 6px #e2dfdf;
 }
 
-#about .info div {
+#about .skills div {
   width: 50%;
   padding: 0;
 }
 
-#about .info figure {
+#about .skills figure {
   width: 50%;
 }
 
-#about .info figure img {
+#about .skills figure img {
   height: 100%;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-#about .info i {
+#about .skills i {
   color: #cddbe8;
-  padding: 0.4em 0.4em 0;
-  border-radius: 50%;
+  padding: 0.4em 0.225em 0;
   font-size: 4rem;
-  margin: 0 0 4px;
 }
 
-#about .info p {
+#about .skills p {
   padding: 0.875em;
 }
 
@@ -494,10 +455,6 @@ section {
 #tech article .item img {
   width: auto;
   height: 100px;
-}
-
-#portfolio {
-  margin: 2em 13%;
 }
 
 #portfolio article {
@@ -598,10 +555,9 @@ section {
   font-size: 1.4rem;
 }
 
-#info {
+#intro {
   max-width: 100%;
-  min-height: 90%;
-  padding: 0;
+  height: auto;
   margin: 0;
   background: #007fad;
   background: radial-gradient(circle, #007fad 0%, #062d4b 100%);
@@ -609,46 +565,39 @@ section {
           box-shadow: 0 6px 6px #e2dfdf;
 }
 
-#info article {
+#intro article {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 13%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 0 auto;
+  max-width: 1080px;
 }
 
-#info article h1 {
+#intro article h1 {
   font-size: 3rem;
-  font-weight: 100;
   color: #fff;
 }
 
-#info article p {
+#intro article p {
   padding: 0 0 1em;
   color: #fff;
   line-height: 1.6em;
 }
 
-#info article aside {
+#intro article aside {
   width: 60%;
-  padding: 50px 30px 0 0;
+  padding: 1.8em 3em 0 0;
 }
 
-#info article figure {
-  width: auto;
-}
-
-#info article figure img {
-  width: 100%;
-  height: auto;
-}
-
-#info ul {
+#intro ul {
   text-align: left;
   color: #fff;
 }
 
 .page ul {
-  padding: 0 0 1em;
+  padding: 0 0;
 }
 
 .page ul li {
@@ -683,6 +632,10 @@ section {
   width: 100%;
 }
 
+.page .intro {
+  margin-bottom: 0;
+}
+
 .page .scrnshts {
   display: -ms-grid;
   display: grid;
@@ -695,6 +648,10 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.page .details {
+  margin: 0;
 }
 
 .page section figure {
@@ -722,7 +679,8 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 13%;
+  margin: 0 auto;
+  max-width: 1080px;
 }
 
 .store span img {
@@ -736,20 +694,23 @@ section {
 }
 
 footer {
-  margin-top: 6em;
   background: url(img/bg-footer.png) #01375f no-repeat center bottom;
   background-attachment: fixed;
   width: 100%;
-  padding: 1.2em 0 4em;
+  margin-top: 1em;
+  padding: 1em 0 4em;
 }
 
 footer section {
   max-width: 100%;
+  margin-top: .225em;
 }
 
 footer h3 {
   color: #fff;
   text-align: center;
+  font-size: 1.6em;
+  font-weight: 300;
 }
 
 footer p {
@@ -764,7 +725,7 @@ footer strong {
 }
 
 footer .inner {
-  max-width: 1050px;
+  max-width: 1080px;
   margin: 0 auto;
 }
 
@@ -876,51 +837,48 @@ footer.sm {
     padding: 14px;
     width: auto;
   }
+  #intro {
+    height: auto;
+    padding-top: 0;
+  }
+  #intro article {
+    display: block;
+    padding: 1.225rem;
+    margin: 0;
+  }
+  #intro article h1 {
+    font-size: 2.225rem;
+  }
+  #intro article aside {
+    width: 100%;
+    padding: 0;
+  }
   #about {
     height: auto;
     margin: 1em 0 0;
   }
   #about article {
-    display: initial;
-  }
-  #about .info {
-    width: auto;
-    max-height: 100%;
-  }
-  #about .info div {
-    width: auto;
-  }
-  #about .info figure {
-    display: none;
+    display: block;
   }
   #about .skills {
-    padding: 12px 0;
-    display: none;
-  }
-  #about .skills li {
-    display: inline;
-    padding: 0;
+    width: auto;
+    max-height: 100%;
+    display: block;
+    margin: 0;
   }
   #about .skills div {
-    padding: 0;
-    width: 58px;
-    height: 58px;
-    margin: 4px;
+    width: auto;
   }
-  #about .skills span {
+  #about .skills figure {
     display: none;
-  }
-  #about .skills .fa {
-    font-size: 40px;
-    padding: 12px;
   }
   article {
     max-width: 100%;
   }
   section {
-    padding: 0 1.2em;
+    padding: 1.225em;
     height: auto;
-    margin: 0 0 2em;
+    margin: 0;
   }
   section .button {
     display: none;
@@ -982,6 +940,10 @@ footer.sm {
   header .inner {
     max-width: 100%;
     position: relative;
+    margin: 0;
+  }
+  .page .scrnshts, .page .screens {
+    display: block;
   }
   #tech article {
     display: -ms-grid;
@@ -1044,15 +1006,6 @@ footer.sm {
   #portfolio article .overlay {
     display: none;
   }
-  #info article {
-    display: block;
-    padding: 0 14px;
-    margin: 0;
-  }
-  #info article aside {
-    width: 100%;
-    padding: 0;
-  }
   .page .secondary {
     padding: 0;
   }
@@ -1096,6 +1049,12 @@ footer.sm {
   .page .secondary .scrnshts {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1440px) {
+  #home h1 {
+    font-size: 3rem;
   }
 }
 
