--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -210,6 +210,10 @@
 
  //CASE STUDIES   
     .page {
+        .list ul {
+            padding:0 1em 0 0;
+            font-size:1.4rem;
+        }
         .secondary {
             padding:0;
             .screens {
@@ -221,11 +225,9 @@
             padding:0;
                 .scrnshts {
                     grid-template-columns: repeat(1, 1fr);
-
                     figure {
                         margin:14px 14px 0;
                     }
-               
                  margin:30px 0; 
                  width:auto;
                  height:100%;
