--- a/css/global.css
+++ b/css/global.css
@@ -654,6 +654,16 @@ nav a i {
   margin: 0;
 }
 
+.page .list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.page .list ul {
+  width: 50%;
+}
+
 .page section figure {
   width: auto;
   height: 100%;
@@ -1005,6 +1015,10 @@ footer.sm {
   }
   #portfolio article .overlay {
     display: none;
+  }
+  .page .list ul {
+    padding: 0 1em 0 0;
+    font-size: 1.4rem;
   }
   .page .secondary {
     padding: 0;
