Live test updates: 1

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -65,10 +65,10 @@ footer {
 
 
 .bioInfo {
-    margin: 0 16px;
+	margin: 0 16px;
+	width:30%;
 	    p {
 			font-size: 1.4rem;
-			color:$color_link;
         }
     .logo {
             padding: 0 0 100px 0;
