project scroll arrows

--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -43,6 +43,9 @@
                     padding:0;
                 }
             }
+            a.rt, a.lt {
+                display:none;
+            }
         }
 
         #about {
