--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -200,12 +200,58 @@
 }
 //Portfolio Pages
 #intro {
+	position: relative;
 	max-width: 100%;
 	height: auto;
 	margin:0;
 	background: rgb(0,127,173);
     background: radial-gradient(circle, rgba(0,127,173,1) 0%, rgba(6,45,75,1) 100%);
 	@include shadow;
+	a.rt, a.lt {
+		display:none;
+	}
+	&:hover {
+		a.rt,a.lt {
+			opacity: .8;
+		}
+	}
+		a.rt {
+			position:absolute;
+			width: 50px;
+			height:100px;
+			right:0;
+			top:41%;
+			display:flex;
+			opacity:0.2;
+			font-size: 6em;
+			background: $color_venice_blue;
+			border-bottom-left-radius: 100px;
+			border-top-left-radius: 100px;
+			@include ease;
+			  .fa {
+				font-size:5rem;
+				padding:24px 0 0 20px
+			  }
+		}
+		a.lt {
+			position:absolute;
+			width: 50px;
+			height:100px;
+			left:0;
+			top:41%;
+			display:flex;
+			opacity: .2;
+			font-size: 6em;
+			background: $color_venice_blue;
+			border-bottom-right-radius: 100px;
+			border-top-right-radius: 100px;
+			  .fa {
+				font-size:5rem;
+				padding:24px 0 0 6px;
+			  }
+		}
+
+	
 	article {
 		display: flex;
 		justify-content: space-around;
@@ -224,6 +270,7 @@
 			width:60%;
 			padding:1.8em 3em 0 0;
 		}
+
 	}
 	ul {
 		text-align:left;
@@ -311,7 +358,7 @@
 		span {
 			display:flex;
 			margin:0 auto;
-			width:1080px;
+			max-width:1080px;
 			img {
 				padding:0 14px;
 				width:auto;
