--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -202,7 +202,7 @@
 #intro {
 	position: relative;
 	max-width: 100%;
-	height: auto;
+	height: 34em;
 	margin:0;
 	background: rgb(0,127,173);
     background: radial-gradient(circle, rgba(0,127,173,1) 0%, rgba(6,45,75,1) 100%);
@@ -267,7 +267,7 @@
 			line-height: 1.6em;
 		}
 		aside {
-			width:60%;
+			width:65%;
 			padding:1.8em 3em 0 0;
 		}
 
