--- a/css/_base.scss
+++ b/css/_base.scss
@@ -20,36 +20,48 @@ body {
 	height: 100%;
 }
 section {
-	margin:2em auto 0;
-	max-width:1080px;
+	margin:0 auto 0;
+	padding:4em 0 4em;
+	text-align: center;
 }
 article {
 	padding:0;
-	margin:0;
-}
+	margin:0 auto;
+	max-width:1000px;
+	h3 {
+		font-size:2rem;
+		padding:18px 0;
+		font-weight:400;
+	}
+		
+	}
 .button {
 	width: 220px;
 	padding: 0.5em 0.225em 0.5em 0.5em;
-	margin: 1.4em 0;
+	margin: 0 auto;
 	text-align: center;
-	color: $white;
 	display: block;
 	font-weight: 300;
 	text-transform: uppercase;
 	border-radius: 0.4em;
-    background: $color_btn_blue;
-    border: 1px solid $color_brdr_btn;
+	border:1px solid #69b8cc;
+	background: $color_btn_blue;
+	color:$white;
+	border:none;
 	@include btn_fade;
 	&:hover {
-        background: $color_splash_page;
         .fas {color:$white;}
 	}
 	.fas {
-		color: $color_brdr_btn;
+		color: $white;
 		font-size: 1.8rem;
         padding: 0 0 0 .225em;
         @include ease;
 	}
+}
+img {
+	width:100%;
+	height:auto;
 }
 //Global page Elements
 .top {
@@ -73,4 +85,26 @@ article {
 	height: $size_100;
 	position: relative;
 }
-
+.jumbotron {
+	text-align: center;
+	background:#1874b6;
+	padding:44px;
+	margin: 64px 0 0;
+	.title {
+		width:30%;
+		margin: 0 auto;
+	}
+	h3, p {
+		color:$white;
+	}
+	h3 {
+		font-size:3rem;
+		margin:1.6rem 0;
+	}
+	.fab {
+		font-size:7rem;
+		padding:18px 24px;
+		color:$color_fab;
+		
+	}
+}
