--- a/css/_master.scss
+++ b/css/_master.scss
@@ -4,23 +4,25 @@
 $color_fa-skills: #cddbe8;
 $color_nav_mobi: #01243e;
 $color_cape_cod: #424141;
-$color_link: #9ab5ce;
+$color_link: #cce4ec;
+
 $white: #fff;
 $color_bon_jour: #c0d4e6;
 $color_light_grey: #f7f7f7;
 $black: #000000;
 $color_celeste: #cccccc;
 $color_olivine: #9c9c9c;
-$color_baltic_sea: #2b2b2b;
-$color_calypso: #32648a;
-$color_splash_page: #01375f;
+$color_baltic_sea: #035080;
+$color_calypso: #1293e4;
+$color_splash_page: #1675c6;
 $color_venice_blue: rgba(3, 84, 144, 0.9);
-$color_btn_blue: rgba(3, 84, 144, 0.4);
+$color_btn_blue: #00B8E6;
 $color_nobel: #8a8888;
-$color_bgbtn: #0262a9;
+$color_bgbtn: #03a8d2;
 $color_brdr_btn: #4177a0;
 $color_logobdr: #3a85bd;
-$color_logo: #a4bf8b;
+$color_logo: #00B8E6;
+$color_fab: #c0dbea;
 
 //sizing
 $size_100: 100%;
@@ -34,7 +36,7 @@ $font_2: Open +Sans;
 
 //urls
 $url_0: url(img/bg-home.png);
-$url_2: url(img/bg-footer.png);
+$url_2: url(img/bg-footer.jpg);
 
 //@extend-elements
 //original selectors
