--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -14,7 +14,10 @@
                 margin:0;
             }
         }
-
+        
+.row {
+    display:block;
+}
         h3 {
             font-size: 2.6rem;
             line-height: 1.2em;
@@ -42,9 +45,6 @@
                     width:100%;
                     padding:0;
                 }
-            }
-            a.rt, a.lt {
-                display:none;
             }
         }
 
@@ -195,59 +195,11 @@
         .top .fa {
             display: none;
         }
+        .jumbotron .title {
+        width:100%;
+        margin:0;
+        }
 //Portfolio Section
-        #portfolio {
-            margin: 0;
-            article {
-                display:block;
-             div {
-                width: auto;
-                padding: 0;
-                margin: 0 0 1.2em;
-                }
-                .overlay {
-                    display:none;
-                }
-            }
-        }
-
- //CASE STUDIES   
-    .page {
-        .list ul {
-            padding:0 1em 0 0;
-            font-size:1.4rem;
-        }
-        .secondary {
-            padding:0;
-            .screens {
-                display:block;
-            }
-            article {
-            width:100%;
-            margin:0;
-            padding:0;
-                .scrnshts {
-                    grid-template-columns: repeat(1, 1fr);
-                    figure {
-                        margin:14px 14px 0;
-                    }
-                 margin:30px 0; 
-                 width:auto;
-                 height:100%;
-                 img {
-                     width:100%;
-                     height:auto;
-                 }
-                }
-            }
-            span {
-                margin:0;
-                p {
-                display:block;
-        }
-      }
-     }
-    }
 }
 
     @media(max-width:960px) {
@@ -264,11 +216,6 @@
         }
             }
 
-        @media(min-width: 1440px) {
-            #home h1 {
-                font-size:3rem;
-            }
-    }
     
     @media(max-device-width: 1024px) {
         #home {
