Portfolio content updates and styles

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -32,9 +32,8 @@ header {
 			}
 		}
 	.brand {
-		background: $color_baltic_sea;
+		background: $color_logo_bg;
 		border-radius: $size_50;
-		border: 1px solid $color_baltic_sea;
 		width: 60px;
 		height: 60px;
 		margin: 0 1em 0 0;
