--- a/css/_master.scss
+++ b/css/_master.scss
@@ -22,6 +22,7 @@ $color_bgbtn: #03a8d2;
 $color_brdr_btn: #4177a0;
 $color_logobdr: #3a85bd;
 $color_logo: #00B8E6;
+$color_logo-bg:#16759e;
 $color_fab: #c0dbea;
 
 //sizing
