--- a/css/_base.scss
+++ b/css/_base.scss
@@ -27,7 +27,7 @@ section {
 article {
 	padding:0;
 	margin:0 auto;
-	max-width:1000px;
+	max-width:800px;
 	h3 {
 		font-size:2rem;
 		padding:18px 0;
@@ -43,14 +43,13 @@ article {
 	display: block;
 	font-weight: 300;
 	text-transform: uppercase;
-	border-radius: 0.4em;
-	border:1px solid #69b8cc;
 	background: $color_btn_blue;
-	color:$white;
-	border:none;
+	border-radius: 0.4em;		
 	@include btn_fade;
 	&:hover {
-        .fas {color:$white;}
+		.fas {color:$white;}
+		background: $color_venice_blue;
+
 	}
 	.fas {
 		color: $white;
@@ -58,6 +57,10 @@ article {
         padding: 0 0 0 .225em;
         @include ease;
 	}
+}
+section .button.disabled {
+	background:#ccc;
+	color:#909090;
 }
 img {
 	width:100%;
@@ -72,7 +75,7 @@ img {
 	.fa {
 		display: block;
 		padding: 8px;
-		color: $color_olivine;
+		color: #18d9ef;
 		font-size: 30px;
 		opacity: .7;
 	}
