--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -81,6 +81,7 @@
             h1 {
                 line-height: 1.2em;
                 font-weight: 100;
+                font-size:2.4rem;
             }
             .button {
                 display:none;
