--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -38,6 +38,9 @@ footer {
 	}
 	.social {
 		margin: 0;
+		a {
+			padding:0 0 .444em;
+		}
 	}
 	h4 {
 		color: $white;
@@ -51,8 +54,9 @@ footer {
 	}
 	.button {
 		margin:5% auto 0;
+		box-shadow: 5px 5px 30px #0490d8;
 			&:hover {
-		background: $color_venice_blue;
+			background: $color_venice_blue;
 	}
 	}
 	span a {
