--- a/css/global.css
+++ b/css/global.css
@@ -43,6 +43,7 @@ table {
 }
 
 h1, h2, h3, h4, h5 {
+  font-family: "Nunito", sans-serif;
   margin: 0;
   padding: 0;
   color: #000000;
@@ -82,7 +83,6 @@ body {
   padding: 0;
   color: #fff;
   height: 100%;
-  font-family: 'Nunito', sans-serif;
 }
 
 section {
