Footer display updates

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -69,7 +69,8 @@ footer {
 
 
 .bioInfo {
-    margin: 0 16px;
+	margin: 0 16px;
+	width:40%;
 	    p {
 			font-size: 1.4rem;
 			color:$color_link;
