--- a/css/_master.scss
+++ b/css/_master.scss
@@ -2,7 +2,7 @@
 
 //colors
 $color_fa-skills: #cddbe8;
-$color_nav_mobi: #01243e;
+$color_nav_mobi: rgba(9, 79, 153, .7);
 $color_cape_cod: #424141;
 $color_link: #cce4ec;
 $white: #fff;
