--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -41,7 +41,6 @@
 		margin:12% auto 0;
 	}
 	.button {
-		border:1px solid #69b8cc;
 		color:$white;
 		box-shadow:4px 4px 30px #1e8996;
 	}
@@ -185,9 +184,11 @@ section {
 	background:#31749e;
 
 }
-
 #fdm {
 	background:#e3e4e6;
+}
+#amny {
+	background:#4bc4ee;
 }
 #n12 {
 	background:#aacae7;
@@ -195,7 +196,6 @@ section {
 		background-color: #9889bd;
 		}
 }
-
 .lt {
 	h3, p {
 		color:$white;
